fix: add whitespace to the header and products section

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 1.6rem;
     padding-bottom: 9rem;
     position: relative;
-    top: -10rem;
+    top: -4rem;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -315,14 +315,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .founder-container img {
-    width: 60%;
+    width: 80%;
     display: block;
     margin: 0 auto;
 }
 
 .founder-container .content {
     position: relative;
-    top: -5rem;
+    top: -7rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -392,6 +392,11 @@ h1, h2, h3, h4, h5, h6 {
 @media only screen and (min-width: 1440px) {
     .founder-container {
         top: -12rem;
+    }
+
+    .founder-container .content {
+        right: -7%;
+        top: 25%;
     }
 }
 
